# yunorunner

./: .gitignore  README.md  add_job.py  analyze_yunohost_app.sh  ciclic  cli.py  config.toml.example  db.sqlite.old  instances  migrates  models.py  pyproject.toml  requirements-frozen.txt  requirements.txt  run.py  schedule.py
maintenance/: chat_notify.sh  compress_logs.sh  finish_install.sh  self_upgrade.sh  update_badges.sh  update_level_apps.sh
results/badges/: get_badges.sh
src/yunorunner/: chat_notify.sh  config.py  models.py  run.py  schedule.py
src/yunorunner/migrations/: 001_initial.py  002_logfiles.py  002_lowercase.py  003_logfiles.py
src/yunorunner/static/js/: vue-timeago.min.js
src/yunorunner/templates/: apps.html  base.html
static/css/: style.css
static/js/: app.js
templates/: app.html  apps.html  base.html  index.html  job.html  menu.html
