[project]
name = "yunorunner"
description = "App continuous integration service for YunoHost"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "YunoHost", email = "yunohost@yunohost.org" }
]

requires-python = ">=3.11"

dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "argh>=0.31.3",
    "peewee>=4.1.0",
    "requests>=2.34.2",
    "sanic>=25.12.1",
    "sanic-jinja2>=2022.11.11",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.mypy]
follow_imports = "skip"
exclude = [
    "acme_tiny",
    "migrations",
    "tests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = []

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`) codes and flake8-bugbear (`B`) rules
# by default.
# Never enforce: `E501` (line length violations),
#                `E402` (Module level import not at top of file).
# Allow autofix for all enabled rules (when `--fix`) is provided.
# Avoid trying to fix flake8-bugbear (`B`) violations.
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/snagflash/bmaptools"
]
# Same as Black.
line-length = 88

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
	   "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT",
	   "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH",
	   "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP",
	   "YTT"]
ignore = ["E501","E402"]
select = ["E", "F", "B"]
unfixable = ["B"]
mccabe.max-complexity = 10
flake8-quotes.docstring-quotes = "double"
per-file-ignores = {}

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
